blog DL Simple +LSTM

--- a/notebook/p7_DL_avance.ipynb
+++ b/notebook/p7_DL_avance.ipynb
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "3ecb2551",
    "metadata": {},
    "outputs": [
@@ -914,8 +914,8 @@
     "            ),\n",
     "            layers.SpatialDropout1D(\n",
     "                0.2\n",
-    "            ),  # régularise les embeddings (eteint des canaux entiers(dimensionde l'embedding) X Dropout eteint des positions individuel aléatoires)\n",
-    "            # LSTM\n",
+    "            ),  \n",
+    "            # BiLSTM\n",
     "            layers.Bidirectional(\n",
     "                layers.LSTM(\n",
     "                    64,\n",
