--- a/notebook/p7_DL_simple.ipynb
+++ b/notebook/p7_DL_simple.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "7180234a",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
     "            text_vectorizer,\n",
     "            layers.Embedding(\n",
     "                input_dim=VOCAB_SIZE,  # Taille du vocab\n",
-    "                output_dim=32,  # Dimensions des embeddings (coorrecte pour len(top_words) )\n",
+    "                output_dim=32,  # Dimensions des embeddings \n",
     "                # input_length=max_tweet_length => optionnel car gap toujours (batch, 32), obligatoire avec flatten\n",
     "            ),\n",
     "            # GAP\n",
