--- a/notebook/p7_modele_simple.ipynb
+++ b/notebook/p7_modele_simple.ipynb
@@ -887,22 +887,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "id": "1cef7e4c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'process_mlflow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[168]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mprocess_mlflow\u001b[49m(\n\u001b[32m      2\u001b[39m     run_name=\u001b[33m\"\u001b[39m\u001b[33mlr_TFIDF_preprocess_2_tweetTokenize_lemmatization\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      3\u001b[39m     preprocess=\u001b[33m\"\u001b[39m\u001b[33mpreprocess_2\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      4\u001b[39m     X_train=X_train,\n\u001b[32m      5\u001b[39m     X_test=X_test,\n\u001b[32m      6\u001b[39m     y_train=y_train,\n\u001b[32m      7\u001b[39m     y_test=y_test,\n\u001b[32m      8\u001b[39m     vectorizer=vectorizer,\n\u001b[32m      9\u001b[39m )\n",
-      "\u001b[31mNameError\u001b[39m: name 'process_mlflow' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "process_mlflow(\n",
     "    run_name=\"lr_TFIDF_preprocess_2_tweetTokenize_lemmatization\",\n",
@@ -1194,59 +1182,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ab6175",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def try_param_lr(X_train, X_test, y_train, y_test, model, param_grid):\n",
-    "    \n",
-    "#     from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "#     model = LogisticRegression(random_state=42)\n",
-    "\n",
-    "#     grid_search = GridSearchCV(\n",
-    "#         estimator=model,\n",
-    "#         param_grid=param_grid,\n",
-    "#         scoring=\"accuracy\",\n",
-    "#         cv=5,\n",
-    "#         n_jobs=-1,\n",
-    "#         verbose=2,\n",
-    "#     )\n",
-    "\n",
-    "#     grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "#     print(\"Best Hyperparameters:\", grid_search.best_params_)\n",
-    "\n",
-    "#     best_model = grid_search.best_estimator_\n",
-    "\n",
-    "#     # Prédire les probabilités pour les ensembles d'entraînement et de test\n",
-    "#     y_train_pred = best_model.predict(X_train)\n",
-    "#     y_train_pred_proba = best_model.predict_proba(X_train)[:, 1]\n",
-    "\n",
-    "#     y_test_pred = best_model.predict(X_test)\n",
-    "#     y_test_pred_proba = best_model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "#     # Calcul des métriques\n",
-    "#     train_accuracy, train_precision, train_recall, train_f1, train_roc_auc = (\n",
-    "#         calcul_metriques(y_train, y_train_pred, y_train_pred_proba)\n",
-    "#     )\n",
-    "#     test_accuracy, test_precision, test_recall, test_f1, test_roc_auc = (\n",
-    "#         calcul_metriques(y_test, y_test_pred, y_test_pred_proba)\n",
-    "#     )\n",
-    "\n",
-    "#     # Affichage des métriques train et test\n",
-    "#     print(f\"Train Accuracy: {train_accuracy:.4f}, Test Accuracy: {test_accuracy:.4f}\")\n",
-    "#     print(\n",
-    "#         f\"Train Precision: {train_precision:.4f}, Test Precision: {test_precision:.4f}\"\n",
-    "#     )\n",
-    "#     print(f\"Train Recall: {train_recall:.4f}, Test Recall: {test_recall:.4f}\")\n",
-    "#     print(f\"Train F1 Score: {train_f1:.4f}, Test F1 Score: {test_f1:.4f}\")\n",
-    "#     print(f\"Train ROC AUC: {train_roc_auc:.4f}, Test ROC AUC: {test_roc_auc:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d3bd3754",
    "metadata": {},
    "outputs": [],
@@ -1446,8 +1381,8 @@
    "source": [
     "param_grid = {\n",
     "    \"C\": [0.01, 0.1, 1, 10],\n",
-    "    # \"penalty\": [\"l2\", \"l1\"],\n",
-    "    # \"solver\": [\"liblinear\", \"saga\"],\n",
+    "    \"penalty\": [\"l2\", \"l1\"],\n",
+    "    \"solver\": [\"liblinear\", \"saga\"],\n",
     "}\n",
     "\n",
     "best_model, grid = process_params_mlflow(\n",
@@ -1732,30 +1667,6 @@
     }
    ],
    "source": [
-    "df_train.shape, df_val.shape, df_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "499ffd16",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((32000, 6), (8000, 6), (10000, 6))"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train = df_train.sample(frac=0.5, random_state=42)\n",
-    "df_test = df_test.sample(frac=0.5, random_state=42)\n",
-    "df_val = df_val.sample(frac=0.5, random_state=42)\n",
     "df_train.shape, df_val.shape, df_test.shape"
    ]
   },
